# tail_mysql

./: Cargo.toml  README.md  mysql-up.sh
config/: my.cnf
src/: buf_ext.rs  conn.rs  lib.rs  protocol.rs  protocol_binlog.rs  scramble.rs  util.rs  value.rs
